# musicplayer

./: .gitignore  pyproject.toml
musicplayer/: __init__.py  app.py  config.yaml  spotify_auth.py
musicplayer/client/: __init__.py  alignment.py  data_manager.py  empty_results_error.py  menu.py  menu_item.py  panel.py  test_panel.py
musicplayer/pytify/: __init__.py
musicplayer/pytify/auth/: __init__.py  auth.py  auth_method.py  authorization.py
musicplayer/pytify/core/: __init__.py  album.py  artist.py  config.py  exceptions.py  execute_request.py  parameter.py  player.py  request_type.py  search.py
musicplayer/templates/: index.html
tests/: test_musicplayer.py
