[tool.poetry]
name = "musicplayer"
version = "0.1.0"
description = ""
authors = ["Dayo <Calikidd86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
PyYAML = "^5.1"
flask = "^1.1"
windows-curses = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
